bk_ida/gccida/g1/compute_hash_table
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_hash_table/src/gcse.c:2966:1: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
reg_avail_info_0 = (  struct reg_avail_info *)v2; 
^~~~~~~~~~~~~~~~
reg_avail_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_hash_table/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_hash_table/src/gcse.c:3091:7: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
free( reg_avail_info_0); 
      ^~~~~~~~~~~~~~~~
      reg_avail_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_hash_table/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_hash_table/src/gcse.c:3092:1: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
reg_avail_info_0 = 0LL; 
^~~~~~~~~~~~~~~~
reg_avail_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_hash_table/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compute_hash_table/src/obj/gcse.o] Error 1
